--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <title>Hello, world!</title>
   </head>
   <body>
-    <h1>Hi!</h1>
+    <h1>Abby Moss</h1>
+    <p>Hi! My name is Abby Moss. I am an 8th- and 9th-grade history teacher. I love learning about the past and recognizing the paths that brought us to our present reality.
+      I am also earning my Masters of Education at the University of Utah in Instructional Design and Educational Technology.</p>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
