--- a/index.html
+++ b/index.html
@@ -8,12 +8,25 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
+    <title>Abby Moss</title>
   </head>
   <body>
     <h1>Abby Moss</h1>
+    <h2>Junior High History Teacher</h2>
+      <ul>
+        <li>About Me</li>
+        <li>Experience</li>
+        <li>Portfolio</li>
+       </ul>  
+    <br></br>
+    
+  <h2>About Me</h2>
     <p>Hi! My name is Abby Moss. I am an 8th- and 9th-grade history teacher. I love learning about the past and recognizing the paths that brought us to our present reality.
       I am also earning my Masters of Education at the University of Utah in Instructional Design and Educational Technology.</p>
+    <img src=””/> <!--I don't know how to add pictures-->
+  
+  <h2>Experience</h2>
+  
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
