--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
   <h2>About Me</h2>
     <p>Hi! My name is Abby Moss. I am an 8th- and 9th-grade history teacher. I love learning about the past and recognizing the paths that brought us to our present reality.
       I am also earning my Masters of Education at the University of Utah in Instructional Design and Educational Technology.</p>
-    <img src=””/> <!--I don't know how to add pictures-->
-  
+    <img src=”headshot.png” alt=:Abby Moss Photo" height="300" width="auto"/> <!--I don't know how to add pictures-->
+
   <h2>Experience</h2>
   
 
