--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <img src=”headshot.png” alt=:Abby Moss Photo" height="300" width="auto"/> <!--I don't know how to add pictures-->
 
   <h2>Experience</h2>
+    <p>This is a test to see if the website is uploading with the pictre</p>                                                                           
   
 
     <!-- Optional JavaScript -->
