--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <h2>Junior High History Teacher</h2>
       <ul>
         <li>About Me</li>
-        <li>Experience</li>
+        <li><a href=”./Experience.html”>Experience</a></li>
         <li>Portfolio</li>
        </ul>  
     <br></br>
