--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <li>About Me</li>
         <li><a href=”./Experience.html”>Experience</a></li>
         <li>Portfolio</li>
+        <li>Contact Me</li>
        </ul>  
     <br></br>
   
