--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <ul>
         <li>About Me</li>
         <li><a href=”./Experience.html”>Experience</a></li>
-        <li><a href="https://www.google.com/search?q=forests&safe=strict&source=lnms&tbm=isch&sa=X&ved=2ahUKEwjnsYiSg87uAhUaHDQIHVpeCdcQ_AUoAXoECBwQAw&biw=1440&bih=702">Portfolio</a></li>
+        <li><a href="https://www.google.com/search?q=forests&safe=strict&source=lnms&tbm=isch&sa=X&ved=2ahUKEwjnsYiSg87uAhUaHDQIHVpeCdcQ_AUoAXoECBwQAw&biw=1440&bih=702" target=_blank>Portfolio</a></li>
         <li>Contact Me</li>
        </ul>  
     <br></br>
