--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <!--I don't know what anyy of this stuff in the head area is... It was just here-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -15,7 +16,7 @@
     <h1>Abby Moss</h1>
     <h3>Junior High History Teacher</h3>
       <ul>
-        <li>About Me</li>
+        <li><a href=#aboutme>About Me</a></li>
         <li><a href=”./Experience.html”>Experience</a></li>
         <li><a href="https://www.google.com/search?q=forests&safe=strict&source=lnms&tbm=isch&sa=X&ved=2ahUKEwjnsYiSg87uAhUaHDQIHVpeCdcQ_AUoAXoECBwQAw&biw=1440&bih=702" target=_blank>Portfolio</a></li>
         <li>Contact Me</li>
@@ -24,7 +25,7 @@
   
   <img width="300" alt="Abby Moss Headshot" src="https://user-images.githubusercontent.com/77716354/106762999-a08d3880-65f3-11eb-86c1-dc48d0e1be56.png">  
   
-  <h3>About Me</h3>
+  <h3 id="aboutme">About Me</h3>
     <p>Hi! My name is Abby Moss. I am an 8th- and 9th-grade history teacher. I love learning about the past and recognizing the paths that brought us to our present reality.
       I am also earning my Masters of Education at the University of Utah in Instructional Design and Educational Technology.</p>
                                                                           
