--- a/index.html
+++ b/index.html
@@ -28,6 +28,16 @@
   <h3 id="aboutme">About Me</h3>
     <p>Hi! My name is Abby Moss. I am an 8th- and 9th-grade history teacher. I love learning about the past and recognizing the paths that brought us to our present reality.
       I am also earning my Masters of Education at the University of Utah in Instructional Design and Educational Technology.</p>
+  <h3>This is just a test header to take up some space</h3>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eget nisl non nisi placerat sollicitudin et et massa. 
+      Maecenas consequat vel sapien quis venenatis. Aenean ac diam bibendum, tempor urna et, semper eros. Duis molestie eleifend libero vel placerat. 
+      Vestibulum ultricies eu urna ac pellentesque. Nulla aliquam leo sapien, eget hendrerit risus vulputate eu. Sed rhoncus est ligula, at cursus risus porta viverra.
+      <br></br>
+      In sed dui id libero venenatis dignissim. Proin dignissim elementum commodo. Aenean tincidunt mauris vitae urna commodo, a ullamcorper libero venenatis. 
+      Phasellus pretium massa vitae pulvinar rhoncus. Maecenas maximus interdum accumsan. Aliquam nunc quam, imperdiet in tortor nec, gravida volutpat urna. 
+      Etiam aliquet porttitor urna vel tempus. Integer convallis urna vitae tellus congue, vel blandit diam rhoncus. In consequat arcu a ex viverra, non auctor dui 
+      porta.
+     </p>
                                                                           
   
 
