--- a/index.html
+++ b/index.html
@@ -15,12 +15,13 @@
   <body>
     <h1>Abby Moss</h1>
     <h3>Junior High History Teacher</h3>
-      <ul>
-        <li><a href=#aboutme>About Me</a></li>
-        <li><a href=”./Experience.html”>Experience</a></li> <!--Doesn't work yet, need to add a new html file for experience-->
-        <li><a href="https://www.google.com/search?q=forests&safe=strict&source=lnms&tbm=isch&sa=X&ved=2ahUKEwjnsYiSg87uAhUaHDQIHVpeCdcQ_AUoAXoECBwQAw&biw=1440&bih=702" target=_blank>Portfolio</a></li>
-        <li>Contact Me</li>
-       </ul>  
+      <nav id+"sec_nav"> 
+        <ul>
+          <li><a href=#aboutme>About Me</a></li>
+          <li><a href=”./Experience.html”>Experience</a></li> <!--Doesn't work yet, need to add a new html file for experience-->
+          <li><a href="https://www.google.com/search?q=forests&safe=strict&source=lnms&tbm=isch&sa=X&ved=2ahUKEwjnsYiSg87uAhUaHDQIHVpeCdcQ_AUoAXoECBwQAw&biw=1440&bih=702" target=_blank>Portfolio</a></li>
+          <li>Contact Me</li>
+        </ul>  
     <br></br>
   
   <img width="300" alt="Abby Moss Headshot" src="https://user-images.githubusercontent.com/77716354/106762999-a08d3880-65f3-11eb-86c1-dc48d0e1be56.png">  
