--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <li><a href=#aboutme>About Me</a></li>
           <li><a href=”./Experience.html” target="_blank">Experience</a></li> <!--Doesn't work yet, need to add a new html file for experience-->
           <li><a href="https://www.google.com/search?q=forests&safe=strict&source=lnms&tbm=isch&sa=X&ved=2ahUKEwjnsYiSg87uAhUaHDQIHVpeCdcQ_AUoAXoECBwQAw&biw=1440&bih=702" target=_blank>Portfolio</a></li>
-          <li>Contact Me</li>
+          <li><a class="btn btn-outline-info" href="./contact.html" role="button" target="_blank">Contact Me</a></li>
         </ul>  
     <br></br>
   
