--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <h1>Abby Moss</h1>
-    <h3<em>>Junior High History Teacher</h3>
+    <h3><e>Junior High History Teacher</em></h3>
       <nav id+"sec_nav"> 
         <ul>
           <li><a href=#aboutme>About Me</a></li>
