--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </ul>  
     <br></br>
   
-  <img width="300" alt="Abby Moss Headshot" src="headshot.png">  
+  <img width="300" alt="Abby Moss Headshot" src="Headshot.png">  
   
   <h3 id="aboutme">About Me</h3>
     <p>Hi! My name is Abby Moss. I am an 8th- and 9th-grade history teacher. I love learning about the past and recognizing the paths that brought us to our present reality.
