--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         </ul>  
     <br></br>
   
-  <img width="300" alt="Abby Moss Headshot" src="Headshot.png">  
-  
+<img width="300" alt="Abby Moss Headshot" src="https://user-images.githubusercontent.com/77716354/106762999-a08d3880-65f3-11eb-86c1-dc48d0e1be56.png">
+    
   <h3 id="aboutme">About Me</h3>
     <p>Hi! My name is Abby Moss. I am an 8th- and 9th-grade history teacher. I love learning about the past and recognizing the paths that brought us to our present reality.
       I am also earning my Masters of Education at the University of Utah in Instructional Design and Educational Technology.</p>
