--- a/index.html
+++ b/index.html
@@ -18,18 +18,20 @@
       <nav id+"sec_nav"> 
         <ul>
           <li><a href=#aboutme>About Me</a></li>
-          <li><a href=”./Experience.html” target="_blank">Experience</a></li> <!--Doesn't work yet, need to add a new html file for experience-->
-          <li><a href="https://www.google.com/search?q=forests&safe=strict&source=lnms&tbm=isch&sa=X&ved=2ahUKEwjnsYiSg87uAhUaHDQIHVpeCdcQ_AUoAXoECBwQAw&biw=1440&bih=702" target=_blank>Portfolio</a></li>
+          <li><a href=”#xperience” target="_blank">Experience</a></li> <!--Doesn't work yet, need to add a new html file for experience-->
+          <li><a href="./projects/1.html" target=_blank>Portfolio</a></li>
           <li><a class="btn btn-outline-info" href="./contact.html" role="button" target="_blank">Contact Me</a></li>
         </ul>  
     <br></br>
   
-<img width="300" alt="Abby Moss Headshot" src="https://user-images.githubusercontent.com/77716354/106762999-a08d3880-65f3-11eb-86c1-dc48d0e1be56.png">
+<img src="img/Headshot.png" alt="Abby Moss Headshot" height="300" width="auto">
     
   <h3 id="aboutme">About Me</h3>
     <p>Hi! My name is Abby Moss. I am an 8th- and 9th-grade history teacher. I love learning about the past and recognizing the paths that brought us to our present reality.
       I am also earning my Masters of Education at the University of Utah in Instructional Design and Educational Technology.</p>
-  <h3>This is just a test header to take up some space</h3>
+    <br></br>
+    
+  <h3 id="experience">Experience</h3>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eget nisl non nisi placerat sollicitudin et et massa. 
       Maecenas consequat vel sapien quis venenatis. Aenean ac diam bibendum, tempor urna et, semper eros. Duis molestie eleifend libero vel placerat. 
       Vestibulum ultricies eu urna ac pellentesque. Nulla aliquam leo sapien, eget hendrerit risus vulputate eu. Sed rhoncus est ligula, at cursus risus porta viverra.
