--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <nav id+"sec_nav"> 
         <ul>
           <li><a href=#aboutme>About Me</a></li>
-          <li><a href=”#xperience” target="_blank">Experience</a></li> <!--Doesn't work yet, need to add a new html file for experience-->
+          <li><a href=”#experience” target="_blank">Experience</a></li> <!--Doesn't work yet, need to add a new html file for experience-->
           <li><a href="./projects/1.html" target=_blank>Portfolio</a></li>
           <li><a class="btn btn-outline-info" href="./contact.html" role="button" target="_blank">Contact Me</a></li>
         </ul>  
