--- a/index.html
+++ b/index.html
@@ -19,18 +19,18 @@
       <nav id="sec_nav"> 
         <ul>
           <li><a href=#aboutme>About Me</a></li>
-          <li><a href=”#experience”>Experience</a></li>
+          <li><a href=#experience>Experience</a></li>
           <li><a href="./projects/1.html" target=_blank>Portfolio</a></li>
           <li><a class="btn btn-outline-info" href="./contact.html" role="button" target="_blank">Contact Me</a></li>
         </ul>  
     <br></br>
   
 <img src="img/Headshot.png" alt="Abby Moss Headshot" height="300" width="auto">
-    <br></ br>
+    <br></br>
   <!--Start About Me Section-->
   <h3 id="aboutme">About Me</h3>
     <p>Hi! My name is Abby Moss. I am an 8th- and 9th-grade history teacher. I love learning about the past and recognizing the paths that brought us to our present reality.
-      I am also earning my Masters of Education at the University of Utah in Instructional Design and Educational Technology.</p>
+      I am also earning my Masters of Education at the University of Utah in Instructional Design and Educational Technology. This is a test. Need to delete. </p>
 <!--End about me Section-->
   <br></br>
   
