--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <h1>Abby Moss</h1>
-    <h3><e>Junior High History Teacher</em></h3>
+    <h3><e>Junior High History Teacher| University of Utah Graduate Student</em></h3>
     <!--Learn how to make this cuter eventually-->
       <nav id="sec_nav"> 
         <ul>
