--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <!--Start About Me Section-->
   <h3 id="aboutme">About Me</h3>
     <p>Hi! My name is Abby Moss. I am an 8th- and 9th-grade history teacher. I love learning about the past and recognizing the paths that brought us to our present reality.
-      I am also earning my Masters of Education at the University of Utah in Instructional Design and Educational Technology. This is a test. Need to delete. </p>
+      I am also earning my Masters of Education at the University of Utah in Instructional Design and Educational Technology.</p>
 <!--End about me Section-->
   <br></br>
   
