--- a/contact.html
+++ b/contact.html
@@ -17,6 +17,19 @@
 	</head>
 	<body>
 		<h1>Contact Me</h1>
+		
+		<form>
+		  <h1>Contact Information</h1>
+			<label for="name"> First and Last Name</label>
+			<input type=text name="name" id="name">
+		  
+		
+		
+		
+		
+		
+		
+		
 
 		<!-- Optional JavaScript -->
 		<!-- jQuery first, then Popper.js, then Bootstrap JS -->
