--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Abby Moss</title>
   </head>
   <body>
-    <h1>Abby Moss</h1>
+    <h1 style="color: green;">Abby Moss</h1>
     <h3><e>Junior High History Teacher| University of Utah Graduate Student</em></h3>
     <!--Learn how to make this cuter eventually-->
       <nav id="sec_nav"> 
