--- a/index.html
+++ b/index.html
@@ -18,6 +18,23 @@
     <h1>Abby Moss</h1>
     <h3><e>Junior High History Teacher| University of Utah Graduate Student</em></h3>
     <!--Learn how to make this cuter eventually-->
+    <div clas="container">
+      <div class="row">
+        <div class="col">
+          <a href=#aboutme>About Me</a>
+        </div>
+        <div class="col">
+          <a href=#experience>Experience</a>
+        </div>
+        <div class="col">
+          <a href="./projects/1.html" target=_blank>Portfolio</a>
+        </div>
+        <div class="col">
+          <a class="btn btn-outline-info" href="./contact.html" role="button" target="_blank">Contact Me</a>
+        </div>
+      </div>
+    </div>  
+        
       <nav id="sec_nav"> 
         <ul>
           <li><a href=#aboutme>About Me</a></li>
