--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
     <!--Learn how to make this cuter eventually-->
     <div clas="container">
       <div class="row">
-        <div class="col">
+        <div class="col-lg-2">
           <a href=#aboutme>About Me</a>
         </div>
-        <div class="col">
+        <div class="col-lg-2">
           <a href=#experience>Experience</a>
         </div>
-        <div class="col">
+        <div class="col-lg-2">
           <a href="./projects/1.html" target=_blank>Portfolio</a>
         </div>
-        <div class="col">
+        <div class="col-lg-2">
           <a class="btn btn-outline-info" href="./contact.html" role="button" target="_blank">Contact Me</a>
         </div>
       </div>
