--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
     <div clas="container">
       <div class="row">
         <div class="col-lg-2">
-          <a id="menu" href=#aboutme>About Me</a>
+          <a class="menu" href=#aboutme>About Me</a>
         </div>
         <div class="col-lg-2">
-          <a id="menu" href=#experience>Experience</a>
+          <a class="menu" href=#experience>Experience</a>
         </div>
         <div class="col-lg-2">
-          <a id="menu" href="./projects/1.html" target=_blank>Portfolio</a>
+          <a class="menu" href="./projects/1.html" target=_blank>Portfolio</a>
         </div>
         <div class="col-lg-2">
-          <a id="menu" href="./contact.html" role="button" target="_blank">Contact Me</a>
+          <a class="menu" href="./contact.html" role="button" target="_blank">Contact Me</a>
         </div>
       </div>
     </div>  
