--- a/index.html
+++ b/index.html
@@ -36,13 +36,21 @@
     </div>  
         
     <br></br>
-  
-<img src="img/Headshot.png" alt="Abby Moss Headshot" height="300" width="auto">
+<div class="container">
+  <div class="row">
+    <div class="col">
+      <img src="img/Headshot.png" alt="Abby Moss Headshot" height="300" width="auto">
+    </div>
+    <div class="col">
+      <h3 id="aboutme">About Me</h3>
+        <p>Hi! My name is Abby Moss. I am an 8th- and 9th-grade history teacher. I love learning about the past and recognizing the paths that brought us to our present reality.
+      I am also earning my Masters of Education at the University of Utah in Instructional Design and Educational Technology.</p>
+    </div>
+  </div>
+</div>  
     <br></br>
   <!--Start About Me Section-->
-  <h3 id="aboutme">About Me</h3>
-    <p>Hi! My name is Abby Moss. I am an 8th- and 9th-grade history teacher. I love learning about the past and recognizing the paths that brought us to our present reality.
-      I am also earning my Masters of Education at the University of Utah in Instructional Design and Educational Technology.</p>
+  
 <!--End about me Section-->
   <br></br>
   
