--- a/index.html
+++ b/index.html
@@ -38,14 +38,15 @@
     <br></br>
 <div class="container">
   <div class="row">
-    <div class="col">
-      <img src="img/Headshot.png" alt="Abby Moss Headshot" height="300" width="auto">
-    </div>
-    <div class="col">
+      <div class="col-lg-3">
       <h3 id="aboutme">About Me</h3>
         <p>Hi! My name is Abby Moss. I am an 8th- and 9th-grade history teacher. I love learning about the past and recognizing the paths that brought us to our present reality.
       I am also earning my Masters of Education at the University of Utah in Instructional Design and Educational Technology.</p>
     </div>
+    <div class="col-lg-3">
+      <img src="img/Headshot.png" alt="Abby Moss Headshot" height="300" width="auto">
+    </div>
+  
   </div>
 </div>  
     <br></br>
