--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
     <br></br>
 <div class="container">
   <div class="row">
-      <div class="col-lg-4">
+      <div class="col">
         <h2><e>Junior High History Teacher| University of Utah Graduate Student</em></h2> 
       </div>
-    <div class="col-lg-3">
+    <div class="col">
       <img src="img/Headshot.png" alt="Abby Moss Headshot" height="300" width="auto">
     </div>
   </div>
