--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <div class="container">
   <div class="row">
       <div class="col">
-        <h2><e>Junior High History Teacher| University of Utah Graduate Student</em></h2> 
+        <h2 class="align-middle">Junior High History Teacher| University of Utah Graduate Student</h2> 
       </div>
     <div class="col">
       <img src="img/Headshot.png" alt="Abby Moss Headshot" height="300" width="auto">
