--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <title>Abby Moss</title>
   </head>
   <body>
-    <h1>Abby Moss</h1>
+    <h1 class="text-center">Abby Moss</h1>
     <!--Learn how to make this cuter eventually-->
     <div clas="container">
       <div class="row">
