--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <h1 class="text-center">Abby Moss</h1>
     <!--Learn how to make this cuter eventually-->
-    <div clas="container" class="text-center">
+    <div class="text-center" clas="container">
       <div class="row">
         <div class="col-lg-2">
           <a class="menu" href=#aboutme>About Me</a>
