--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <h1 class="text-center">Abby Moss</h1>
     <!--Learn how to make this cuter eventually-->
-    <div class="text-center" clas="container-fluid">
+    <div class="d-flex justify-content-center" clas="container-fluid">
       <div id="navigationmenu" class="row">
         <div class="col-lg-2">
           <a class="menu" href=#aboutme>About Me</a>
