--- a/index.html
+++ b/index.html
@@ -17,18 +17,18 @@
   <body>
     <h1 class="text-center">Abby Moss</h1>
     <!--Learn how to make this cuter eventually-->
-    <div class="d-flex justify-content-center" clas="container">
+    <div clas="container">
       <div id="navigationmenu" class="row">
-        <div class="col-lg-2">
+        <div class="col">
           <a class="menu" href=#aboutme>About Me</a>
         </div>
-        <div class="col-lg-2">
+        <div class="col">
           <a class="menu" href=#experience>Experience</a>
         </div>
-        <div class="col-lg-2">
+        <div class="col2">
           <a class="menu" href="./projects/1.html" target=_blank>Portfolio</a>
         </div>
-        <div class="col-lg-2">
+        <div class="col">
           <a class="menu" href="./contact.html" role="button" target="_blank">Contact Me</a>
         </div>
       </div>
