--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="col">
           <a class="menu" href=#experience>Experience</a>
         </div>
-        <div class="col2">
+        <div class="col">
           <a class="menu" href="./projects/1.html" target=_blank>Portfolio</a>
         </div>
         <div class="col">
