--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <h1 class="text-center">Abby Moss</h1>
     <!--Learn how to make this cuter eventually-->
-    <div class="container">
+    <div class="menu" class="container">
       <div id="navigationmenu" class="row">
         <div class="col">
           <a class="menu" href=#aboutme>About Me</a>
