--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <h1 class="text-center">Abby Moss</h1>
     <!--Learn how to make this cuter eventually-->
     <div class="container">
-      <div id="navigationmenu" class="row">
+      <div id="navigationmenu" class"menu" class="row">
         <div class="col">
           <a class="menu" href=#aboutme>About Me</a>
         </div>
