--- a/contact.html
+++ b/contact.html
@@ -13,19 +13,30 @@
 		<title>Abby Moss</title>
 	</head>
 	<body>
-		<h1>Contact Me</h1>
-		
+	  <h1 class="text-center">Abby Moss</h1>
+	    <div class="container">
+              <div id="menu" class"menu" class="row">
+                <div class="col">
+                  <a class="menu" href=#aboutme>About Me</a>
+                </div>
+                <div class="col">
+                  <a class="menu" href=#experience>Experience</a>
+                </div>
+                <div class="col">
+                  <a class="menu" href="./projects/1.html" target=_blank>Portfolio</a>
+                </div>
+                <div class="col">
+                  <a class="menu" href="./contact.html" role="button" target="_blank">Contact Me</a>
+                </div>
+              </div>
+            </div>
+	  <h1>Contact Me</h1>
 		<form>
 		  <h1>Contact Information</h1>
 			<label for="name"> First and Last Name</label>
 			<input type=text name="name" id="name">
 		  
-		
-		
-		
-		
-		
-		
+
 		
 
 		<!-- Optional JavaScript -->
