--- a/projects/1.html
+++ b/projects/1.html
@@ -13,6 +13,23 @@
 		<title>Abby Moss</title>
 	</head>
 	<body>
+	  <h1 class="text-center">Abby Moss</h1>
+          <div class="container">
+            <div id="menu" class"menu" class="row">
+              <div class="col">
+                <a class="menu" href=#aboutme>About Me</a>
+              </div>
+              <div class="col">
+                <a class="menu" href=#experience>Experience</a>
+              </div>
+              <div class="col">
+                <a class="menu" href="./projects/1.html" target=_blank>Portfolio</a>
+              </div>
+              <div class="col">
+                <a class="menu" href="./contact.html" role="button" target="_blank">Contact Me</a>
+              </div>
+            </div>
+          </div>
 		<h1>Project #1</h1>
 
 		<!-- Optional JavaScript -->
