--- a/contact.html
+++ b/contact.html
@@ -13,23 +13,24 @@
 		<title>Abby Moss</title>
 	</head>
 	<body>
-	<h1 class="text-center">Abby Moss</h1>
-	  <div class="container">
-            <div id="menu" class"menu" class="row">
-              <div class="col">
-                <a class="menu" href=#aboutme>About Me</a>
-              </div>
-              <div class="col">
-                <a class="menu" href=#experience>Experience</a>
-              </div>
-              <div class="col">
-                <a class="menu" href="./projects/1.html" target=_blank>Portfolio</a>
-              </div>
-              <div class="col">
-                <a class="menu" href="./contact.html" role="button" target="_blank">Contact Me</a>
+	  <h1 class="text-center">Abby Moss</h1>
+	    <div class="container">
+              <div id="menu" class"menu" class="row">
+                <div class="col">
+                  <a class="menu" href="./index.html">About Me</a>
+                </div>
+                <div class="col">
+                  <a class="menu" href="./index.html">Experience</a>
+                </div>
+                <div class="col">
+                  <a class="menu" href="./projects/1.html" target=_blank>Portfolio</a>
+                </div>
+                <div class="col">
+                  <a class="menu" href="./contact.html" role="button" target="_blank">Contact Me</a>
+                </div>
               </div>
             </div>
-          </div>
+		<br></br>
 	  <h1>Contact Me</h1>
 		<form>
 		  <h1>Contact Information</h1>
