--- a/contact.html
+++ b/contact.html
@@ -1,42 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<!-- Required meta tags -->
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <!-- Bootstrap CSS -->
+    <link href="style.css" type="text/css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Raleway&display=swap" rel="stylesheet">
+  
+    <title>Abby Moss</title>
+  </head>
+  <body>
+    <h1 class="text-center">Abby Moss</h1>
+      <div class="container">
+        <div id="menu" class="menu" class="row">
+	  <div class="col">
+	    <a class="menu" href="./index.html">About Me</a>
+	  </div>
+	  <div class="col">
+	    <a class="menu" href="./index.html">Experience</a>
+	  </div>
+	  <div class="col">
+	    <a class="menu" href="./projects/1.html" target=_blank>Portfolio</a>
+	  </div>
+	  <div class="col">
+	    <a class="menu" href="./contact.html" role="button" target="_blank">Contact Me</a>
+	  </div>
+        </div>
+      </div>
+	<br></br>
+    <h1>Contact Me</h1>
+      <form>
+        <h1>Contact Information</h1>
+	  <label for="name"> First and Last Name</label>
+	  <input type=text name="name" id="name">
 
-		<!-- Bootstrap CSS -->
-		 <link href="style.css" type="text/css" rel="stylesheet">
-		<link rel="preconnect" href="https://fonts.gstatic.com">
-		<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Raleway&display=swap" rel="stylesheet">
-
-		<title>Abby Moss</title>
-	</head>
-	<body>
-	  <h1 class="text-center">Abby Moss</h1>
-	    <div class="container">
-              <div id="menu" class"menu" class="row">
-                <div class="col">
-                  <a class="menu" href="./index.html">About Me</a>
-                </div>
-                <div class="col">
-                  <a class="menu" href="./index.html">Experience</a>
-                </div>
-                <div class="col">
-                  <a class="menu" href="./projects/1.html" target=_blank>Portfolio</a>
-                </div>
-                <div class="col">
-                  <a class="menu" href="./contact.html" role="button" target="_blank">Contact Me</a>
-                </div>
-              </div>
-            </div>
-		<br></br>
-	  <h1>Contact Me</h1>
-		<form>
-		  <h1>Contact Information</h1>
-			<label for="name"> First and Last Name</label>
-			<input type=text name="name" id="name">
-		  
 
 		
 
