--- a/contact.html
+++ b/contact.html
@@ -30,9 +30,9 @@
         </div>
       </div>
 	<br></br>
-    <h1>Contact Me</h1>
+    <h1 class="text-center">Contact Me</h1>
       <form>
-        <h1>Contact Information</h1>
+        <h3>Contact Information</h1>
 	  <label for="name"> First and Last Name</label>
 	  <input type=text name="name" id="name">
 
