--- a/contact.html
+++ b/contact.html
@@ -35,6 +35,9 @@
         <h3>Contact Information</h1>
 	  <label for="name"> First and Last Name</label>
 	  <input type=text name="name" id="name">
+  </body>
+  <body>
+	
 
 
 		
@@ -56,5 +59,5 @@
 			integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
 			crossorigin="anonymous"
 		></script>
-	</body>
+  </body>
 </html>
