--- a/contact.html
+++ b/contact.html
@@ -1,63 +1,33 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <!-- Bootstrap CSS -->
-    <link href="style.css" type="text/css" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Raleway&display=swap" rel="stylesheet">
-  
-    <title>Abby Moss</title>
-  </head>
-  <body>
-    <h1 class="text-center">Abby Moss</h1>
-      <div class="container">
-        <div id="menu" class="menu" class="row">
-	  <div class="col">
-	    <a class="menu" href="./index.html">About Me</a>
-	  </div>
-	  <div class="col">
-	    <a class="menu" href="./index.html">Experience</a>
-	  </div>
-	  <div class="col">
-	    <a class="menu" href="./projects/1.html" target=_blank>Portfolio</a>
-	  </div>
-	  <div class="col">
-	    <a class="menu" href="./contact.html" role="button" target="_blank">Contact Me</a>
-	  </div>
-        </div>
-      </div>
-	<br></br>
-    <h1 class="text-center">Contact Me</h1>
-      <form>
-        <h3>Contact Information</h1>
-	  <label for="name"> First and Last Name</label>
-	  <input type=text name="name" id="name">
-  </body>
-  <body>
-	
-
-
-		
-
-		<!-- Optional JavaScript -->
-		<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-		<script
-			src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-			integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-			crossorigin="anonymous"
-		></script>
-		<script
-			src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-			integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-			crossorigin="anonymous"
-		></script>
-		<script
-			src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-			integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-			crossorigin="anonymous"
-		></script>
-  </body>
+	<head>
+		<link href="style.css" type="text/css" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Raleway&display=swap" rel="stylesheet">
+		<title>Abby Moss</title>
+	</head>
+	<body>
+		<h1 class="text-center">Abby Moss</h1>
+		<div class="container">
+			<div id="menu" class="row">
+				<div class="col">
+					<a class="menu" href="./index.html" target="_blank">About Me</a>
+				</div>
+				<div class="col">
+					<a class="menu" href="./index.html" target="_blank">Experience</a>
+				</div>
+				<div class="col">
+					<a class="menu" href="./projects/1.html" target="_blank">Portfolio</a>
+				</div>
+				<div class="col">
+					<a class="menu" href="./contact.html" target="_blank">Contact Me</a>
+				</div>
+			</div>
+		</div>
+		<br></br>
+		<h1 class="text-center"> Contact Me</h1>
+		<form>
+			<h3> Contact Information </h3>
+			<label for="name">First and Last Name</label>
+			<input type=text name="name" id="name">
+	</body>
 </html>
