--- a/index.html
+++ b/index.html
@@ -17,19 +17,19 @@
   <body>
     <h1 class="text-center">Abby Moss</h1>
     <!--Learn how to make this cuter eventually-->
-    <div class="container">
-      <div class="menu" class="row">
+    <div class="menu" class="container">
+      <div class="row">
         <div class="col">
-          <a class="menu" href=#aboutme>About Me</a>
+          <a href=#aboutme>About Me</a>
         </div>
         <div class="col">
-          <a class="menu" href=#experience>Experience</a>
+          <a href=#experience>Experience</a>
         </div>
         <div class="col">
-          <a class="menu" href="./projects/1.html" target=_blank>Portfolio</a>
+          <a href="./projects/1.html" target=_blank>Portfolio</a>
         </div>
         <div class="col">
-          <a class="menu" href="./contact.html" role="button" target="_blank">Contact Me</a>
+          <a href="./contact.html" role="button" target="_blank">Contact Me</a>
         </div>
       </div>
     </div>  
