--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
   <body>
     <h1 class="text-center">Abby Moss</h1>
     <!--Learn how to make this cuter eventually-->
-    <div class="menu" class="container">
-      <div class="menu" class="row">
+    <div id="menu" class="container">
+      <div class="row">
         <div class="col">
           <a href=#aboutme>About Me</a>
         </div>
