--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <h1 class="text-center">Abby Moss</h1>
     <!--Learn how to make this cuter eventually-->
-    <div id="menu" class="container">
+    <div id="menu" class="menu" class="container">
       <div class="row">
         <div class="col">
           <a href=#aboutme>About Me</a>
