--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
     <h1 class="text-center">Abby Moss</h1>
     <!--Learn how to make this cuter eventually-->
     <div id="menu" class="menu" class="container">
-      <div class="menu" class="row">
-        <div class="menu" class="col">
+      <div class="row">
+        <div class="col">
           <a href=#aboutme>About Me</a>
         </div>
-        <div class="menu" class="col">
+        <div class="col">
           <a href=#experience>Experience</a>
         </div>
-        <div class="menu" class="col">
+        <div class="col">
           <a href="./projects/1.html" target=_blank>Portfolio</a>
         </div>
-        <div class="menu" class="col">
+        <div class="col">
           <a href="./contact.html" role="button" target="_blank">Contact Me</a>
         </div>
       </div>
