--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
     <!--Learn how to make this cuter eventually-->
     <div class="container">
       <div id="menu" class="row">
-        <div class="menu" class="col">
+        <div class="col">
           <a href=#aboutme>About Me</a>
         </div>
-        <div class="menu" class="col">
+        <div class="col">
           <a href=#experience>Experience</a>
         </div>
-        <div class="menu" class="col">
+        <div class="col">
           <a href="./projects/1.html" target=_blank>Portfolio</a>
         </div>
-        <div class="menu" class="col">
+        <div class="col">
           <a href="./contact.html" role="button" target="_blank">Contact Me</a>
         </div>
       </div>
