--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <h1 class="text-center">Abby Moss</h1>
-    <!--Learn how to make this cuter eventually-->
+    <!--The font was green but I don't know what happened??????-->
     <div class="container">
       <div id="menu" class="row">
         <div class="col">
