--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="container">
       <div id="menu" class="row">
         <div class="col">
-          <a href=#aboutme>About Me</a>
+          <a href=#aboutme>About MeJJJJ</a>
         </div>
         <div class="col">
           <a href=#experience>Experience</a>
