--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
   <body>
     <h1 class="text-center">Abby Moss</h1>
     <!--The font was green but I don't know what happened??????-->
-    <div class="container">
-      <div id="menu" class="menu" class="row">
+    <div id="menu" class="container">
+      <div class="row">
         <div class="col">
           <a href=#aboutme>About MeJJJJ</a>
         </div>
