--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <!--The font was green but I don't know what happened??????-->
     <div id="menu" class="container">
       <div class="row">
-        <div class="col">
-          <a href=#aboutme style=color: var(--green);>About Me</a>
+        <div style=color: var(--green); class="col">
+          <a href=#aboutme>About Me</a>
         </div>
         <div class="col">
           <a href=#experience>Experience</a>
