--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!--The font was green but I don't know what happened??????-->
     <div id="menu" class="container">
       <div class="row">
-        <div style=color: var(--green); class="col">
+        <div class="col">
           <a href=#aboutme>About Me</a>
         </div>
         <div class="col">
