--- a/contact.html
+++ b/contact.html
@@ -10,16 +10,16 @@
 		<div class="container">
 			<div id="menu" class="row">
 				<div class="col">
-					<a class="menu" href="./index.html" target="_blank">About Me</a>
+					<a href="./index.html" target="_blank">About Me</a>
 				</div>
 				<div class="col">
-					<a class="menu" href="./index.html" target="_blank">Experience</a>
+					<a href="./index.html" target="_blank">Experience</a>
 				</div>
 				<div class="col">
-					<a class="menu" href="./projects/1.html" target="_blank">Portfolio</a>
+					<a href="./projects/1.html" target="_blank">Portfolio</a>
 				</div>
 				<div class="col">
-					<a class="menu" href="./contact.html" target="_blank">Contact Me</a>
+					<a href="./contact.html" target="_blank">Contact Me</a>
 				</div>
 			</div>
 		</div>
