--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
 	<body>
 		<h1 class="text-center">Abby Moss</h1>
 		<div class="container">
-			<div id="menu" class="row">
+			<div class="menu" class="row">
 				<div class="col">
 					<a href="./index.html" target="_blank">About Me</a>
 				</div>
