--- a/contact.html
+++ b/contact.html
@@ -8,20 +8,20 @@
 	<body>
 		<h1 class="text-center">Abby Moss</h1>
 		<div class="container">
-			<div class="menu" class="row">
-				<div class="col">
-					<a href="./index.html" target="_blank">About Me</a>
-				</div>
-				<div class="col">
-					<a href="./index.html" target="_blank">Experience</a>
-				</div>
-				<div class="col">
-					<a href="./projects/1.html" target="_blank">Portfolio</a>
-				</div>
-				<div class="col">
-					<a href="./contact.html" target="_blank">Contact Me</a>
-				</div>
-			</div>
+		  <div class="row">
+		    <div class="col">
+		      <a href="./index.html" target="_blank">About Me</a>
+		    </div>
+		    <div class="col">
+		      <a href="./index.html" target="_blank">Experience</a>
+		    </div>
+		    <div class="col">
+		      <a href="./projects/1.html" target="_blank">Portfolio</a>
+		    </div>
+		    <div class="col">
+		      <a href="./contact.html" target="_blank">Contact Me</a>
+		    </div>
+	          </div>
 		</div>
 		<br></br>
 		<h1 class="text-center"> Contact Me</h1>
