--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <div class="container">
   <div class="row">
       <div class="col">
-        <h2 class="title" class="center">Junior High History Teacher| University of Utah Graduate Student</h2>  
+        <h2 class="job">Junior High History Teacher| University of Utah Graduate Student</h2>  
         <!--I have tried everything to vertically center the above text on the page and I can't figure it out!!-->
       </div>
     <div class="col">
