--- a/index.html
+++ b/index.html
@@ -16,25 +16,24 @@
   </head>
   <body>
     <h1 class="text-center">Abby Moss</h1>
-    <!--The font was green but I don't know what happened??????-->
     <div id="menu" class="container">
       <div class="row">
         <div class="col">
-          <a href=#aboutme>About Me</a>
+          <a href=#aboutme id="menu">About Me</a>
         </div>
         <div class="col">
-          <a href=#experience>Experience</a>
+          <a href=#experience id="menu">Experience</a>
         </div>
         <div class="col">
-          <a href="./projects/1.html" target=_blank>Portfolio</a>
+          <a href="./projects/1.html" target=_blank id="menu"> Portfolio</a>
         </div>
         <div class="col">
-          <a href="./contact.html" role="button" target="_blank">Contact Me</a>
+          <a href="./contact.html" role="button" target="_blank" id="menu">Contact Me</a>
         </div>
       </div>
     </div>  
         
-    <br></br>
+    <br>
 <div class="container">
   <div class="row">
       <div class="col">
@@ -46,13 +45,13 @@
     </div>
   </div>
 </div>  
-    <br></br>
+    <br>
   <!--Start About Me Section-->
   <h3 id="aboutme">About Me</h3>
         <p>Hi! My name is Abby Moss. I am an 8th- and 9th-grade history teacher. I love learning about the past and recognizing the paths that brought us to our present reality.
       I am also earning my Masters of Education at the University of Utah in Instructional Design and Educational Technology.</p>
 <!--End about me Section-->
-  <br></br>
+  <br>
   
 <!--Start about Experience-->
   <h3 id="experience">Experience</h3>
@@ -60,7 +59,7 @@
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eget nisl non nisi placerat sollicitudin et et massa. 
       Maecenas consequat vel sapien quis venenatis. Aenean ac diam bibendum, tempor urna et, semper eros. Duis molestie eleifend libero vel placerat. 
       Vestibulum ultricies eu urna ac pellentesque. Nulla aliquam leo sapien, eget hendrerit risus vulputate eu. Sed rhoncus est ligula, at cursus risus porta viverra.
-      <br></br>
+      <br>
       In sed dui id libero venenatis dignissim. Proin dignissim elementum commodo. Aenean tincidunt mauris vitae urna commodo, a ullamcorper libero venenatis. 
       Phasellus pretium massa vitae pulvinar rhoncus. Maecenas maximus interdum accumsan. Aliquam nunc quam, imperdiet in tortor nec, gravida volutpat urna. 
       Etiam aliquet porttitor urna vel tempus. Integer convallis urna vitae tellus congue, vel blandit diam rhoncus. In consequat arcu a ex viverra, non auctor dui 
