--- a/index.html
+++ b/index.html
@@ -56,14 +56,11 @@
 <!--Start about Experience-->
   <h3 id="experience">Experience</h3>
 <!--Need to change text with my own information-->
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eget nisl non nisi placerat sollicitudin et et massa. 
-      Maecenas consequat vel sapien quis venenatis. Aenean ac diam bibendum, tempor urna et, semper eros. Duis molestie eleifend libero vel placerat. 
-      Vestibulum ultricies eu urna ac pellentesque. Nulla aliquam leo sapien, eget hendrerit risus vulputate eu. Sed rhoncus est ligula, at cursus risus porta viverra.
-      <br>
-      In sed dui id libero venenatis dignissim. Proin dignissim elementum commodo. Aenean tincidunt mauris vitae urna commodo, a ullamcorper libero venenatis. 
-      Phasellus pretium massa vitae pulvinar rhoncus. Maecenas maximus interdum accumsan. Aliquam nunc quam, imperdiet in tortor nec, gravida volutpat urna. 
-      Etiam aliquet porttitor urna vel tempus. Integer convallis urna vitae tellus congue, vel blandit diam rhoncus. In consequat arcu a ex viverra, non auctor dui 
-      porta.
+    <p>I recently started my career as a Junior High Social Studies teacher. I completed my undergraduate degree at Brigham Young University in 2019. At BYU, I studied History teaching and Teaching English as a Second Language. <br>
+    <br>
+        During my time at BYU, I was assigned to student teach at Orem Junior High. After I completed my student teaching experience, I was hired to teach at OJHS. I have been at Orem Junior for the past year and a half as an 8th-Grade U.S. History teacher and a 9th-Grade World History/Geography teacher. <br>
+        <br>
+       During my first year teaching, I decided that I wanted to further my education while I was young.  I have been working on a Masters of Education at the University of Utah. This Masters Degree is in Instructional Design and Educational Technology. I have completed almost two semesters in the IDET program at the University of Utah. I'm excited to see what else I learn in this program.
      </p>
 <!--Finish Experience-->
                                                                           
