--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <a href=#aboutme id="menu">About Me</a>
         </div>
         <div class="col">
-          <a href=#experience id="menu">Experience</a>
+          <a href="./experience.html" id="menu">Experience</a>
         </div>
         <div class="col">
           <a href="./projects/1.html" target=_blank id="menu"> Portfolio</a>
