--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <!--I have tried everything to vertically center the above text on the page and I can't figure it out!!-->
       </div>
     <div class="col">
-      <img src="img/Headshot.png" alt="Abby Moss Headshot" class="picture">
+      <img src="img/Headshot.png" alt="Abby Moss Headshot" height="320" width="auto" border: 10px solid var(--green);>
     </div>
   </div>
 </div>  
