--- a/index.html
+++ b/index.html
@@ -16,44 +16,36 @@
   </head>
   <body>
     <h1 class="text-center">Abby Moss</h1>
-    <div id="menu" class="container">
-      <div class="row">
-        <div class="col">
-          <a href=#aboutme id="menu">About Me</a>
-        </div>
-        <div class="col">
-          <a href="./experience.html" id="menu">Experience</a>
-        </div>
-        <div class="col">
-          <a href="./projects/1.html" target=_blank id="menu"> Portfolio</a>
-        </div>
-        <div class="col">
-          <a href="./contact.html" role="button" target="_blank" id="menu">Contact Me</a>
-        </div>
-      </div>
-    </div>  
-        
+      <nav id="menu" class="stroke">
+          <ul>
+              <li><a href="./index.html" id="menu">Home</a></li>
+              <li><a href="./experience.html" id="menu">Experience</a></li>
+              <li><a href="ref=./projects/1.html" target=_blank id="menu">Portfolio</a></li>
+              <li><a href="./contact.html" id="menu">Contact Me</a></li>
+          </ul>
+      </nav> 
     <br>
 <div class="container">
   <div class="row">
       <div class="col">
         <h2 class="job">Junior High History Teacher| University of Utah Graduate Student</h2>  
+        <!--I have tried everything to vertically center the above text on the page and I can't figure it out!!-->
       </div>
     <div class="col">
-      <img src="img/Headshot.png" alt="Abby Moss Headshot" height="400" width="auto" border: 10px solid var(--green);>
+      <img src="img/Headshot.png" alt="Abby Moss Headshot" height="400" width="auto" style="border: 10px solid var(--green);">
     </div>
   </div>
 </div>  
     <br>
   <!--Start About Me Section-->
-  <h3 id="aboutme">About Me</h3>
+  <h3 id="aboutme" style="margin-right: 150px; margin-left: 150px;">About Me</h3>
         <p>Hi! My name is Abby Moss. I am an 8th- and 9th-grade history teacher. I love learning about the past and recognizing the paths that brought us to our present reality.
       I am also earning my Masters of Education at the University of Utah in Instructional Design and Educational Technology.</p>
 <!--End about me Section-->
   <br>
   
 <!--Start about Experience-->
-  <h3 id="experience">Experience</h3>
+  <h3 id="experience" style="margin-right: 150px; margin-left: 150px;">Experience</h3>
 <!--Need to change text with my own information-->
     <p>I recently started my career as a Junior High Social Studies teacher. I completed my undergraduate degree at Brigham Young University in 2019. At BYU, I studied History teaching and Teaching English as a Second Language. <br>
     <br>
