--- a/contact.html
+++ b/contact.html
@@ -1,33 +1,66 @@
 <!doctype html>
 <html lang="en">
-	<head>
-		<link href="style.css" type="text/css" rel="stylesheet">
-		<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Raleway&display=swap" rel="stylesheet">
-		<title>Abby Moss</title>
-	</head>
-	<body>
-		<h1 class="text-center">Abby Moss</h1>
-		<div class="container">
-		  <div class="row">
-		    <div class="col">
-		      <a href="./index.html" target="_blank">About Me</a>
-		    </div>
-		    <div class="col">
-		      <a href="./index.html" target="_blank">Experience</a>
-		    </div>
-		    <div class="col">
-		      <a href="./projects/1.html" target="_blank">Portfolio</a>
-		    </div>
-		    <div class="col">
-		      <a href="./contact.html" target="_blank">Contact Me</a>
-		    </div>
-	          </div>
-		</div>
-		<br></br>
-		<h1 class="text-center"> Contact Me</h1>
-		<form>
-			<h2> Contact Information </h2>
-			<label for="name">First and Last Name</label>
-			<input type=text name="name" id="name">
-	</body>
-</html>
+  <head>
+    <!--I don't know what anyy of this stuff in the head area is... It was just here-->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+      <link href="style.css" type="text/css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Raleway&display=swap" rel="stylesheet">
+    
+    <title>Abby Moss</title>
+  </head>
+  <body>
+    <h1 class="text-center">Abby Moss</h1><br>
+      <nav id="menu" class="stroke">
+          <ul>
+              <li><a href="./index.html" id="menu">Home</a></li>
+              <li><a href="./experience.html" id="menu">Experience</a></li>
+              <li><a href="ref=./projects/1.html" target=_blank id="menu">Portfolio</a></li>
+              <li><a href="./contact.html" id="menu">Contact Me</a></li>
+          </ul>
+      </nav> 
+<br>
+    <h2 class="text-center"> Contact Me</h2> 
+      <p style="text-align: center">Use the form below to contact me. I'd love to help!</p> <br>
+      
+		<form class="form">
+			<h3 style="margin-right: 150px; margin-left: 150px;"> Contact Information </h3>
+            <table style="width:80%; margin-right: 150px; margin-left: 150px;">
+                <tr>
+                    <th>First Name:</th>
+                    <th>Last Name</th>
+                </tr>
+                <tr>
+                    <td><input type=text name="firstname" id="firstname" style="width: 100%" placeholder="First Name"></td>
+                    <td><input type=text name="lastname" id="lastname" style="width: 100%" placeholder="Last Name"></td>
+                </tr>
+                <tr>
+                    <th colspan="2">Email</th>
+                </tr>
+                <tr>
+                    <td colspan="2"><input type=text name="email" id="email" style="width: 100%" placeholder="Email"></td>
+                </tr>
+                <tr>
+                    <th colspan="2">Subject of Message</th>
+                </tr>
+                <tr>
+                    <td colspan="2"><input type=text name="subject" id="subject" style="width: 100%" placeholder="Subject"></td>
+                </tr>
+                <tr>
+                    <th colspan="2">Message</th>
+                </tr>
+                <tr>
+                    <td colspan="2"><input type=text name="message" id="message" style="width: 100%; height: 200px; vertical-align:top"></td>
+                </tr>
+                <tr>
+                    <th colspan="2"><input type="submit"></th>
+                </tr>
+            </table>
+      </form>
+    </body>
+</html>    
