--- a/experience.html
+++ b/experience.html
@@ -1,1 +1,30 @@
+<!doctype html>
+<html lang="en">
+  <head>
+    <!--I don't know what anyy of this stuff in the head area is... It was just here-->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+    <!-- Bootstrap CSS -->
+      <link href="style.css" type="text/css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Raleway&display=swap" rel="stylesheet">
+    
+    <title>Abby Moss</title>
+  </head>
+  <body>
+    <h1 class="text-center">Abby Moss</h1><br>
+      <nav id="menu" class="stroke">
+          <ul>
+              <li><a href="./index.html" id="menu">Home</a></li>
+              <li><a href="./experience.html" id="menu">Experience</a></li>
+              <li><a href="ref=./projects/1.html" target=_blank id="menu">Portfolio</a></li>
+              <li><a href="./contact.html" id="menu">Contact Me</a></li>
+          </ul>
+      </nav> 
+<br>
+   
+  </body>
+</html>
