--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
 			<h3 style="margin-right: 150px; margin-left: 150px;"> Contact Information </h3>
             <table style="width:80%; margin-right: 150px; margin-left: 150px;">
                 <tr>
-                    <th>First Name:</th>
+                    <th style="color var(--green)">First Name:</th>
                     <th>Last Name</th>
                 </tr>
                 <tr>
