--- a/experience.html
+++ b/experience.html
@@ -25,6 +25,12 @@
           </ul>
       </nav> 
 <br>
-   
-  </body>
+      <h2 class="text-center">Experience</h2>
+      <p>I recently started my career as a Junior High Social Studies teacher. I completed my undergraduate degree at Brigham Young University in 2019. At BYU, I studied History teaching and Teaching English as a Second Language. <br><br>
+    
+      During my time at BYU, I was assigned to student teach at Orem Junior High. After I completed my student teaching experience, I was hired to teach at OJHS. I have been at Orem Junior for the past year and a half as an 8th-Grade U.S. History teacher and a 9th-Grade World History/Geography teacher. <br><br>
+          
+      During my first year teaching, I decided that I wanted to further my education while I was young.  I have been working on a Masters of Education at the University of Utah. This Masters Degree is in Instructional Design and Educational Technology. I have completed almost two semesters in the IDET program at the University of Utah. I'm excited to see what else I learn in this program.
+     </p>
+    </body>
 </html>
