--- a/index.html
+++ b/index.html
@@ -25,23 +25,23 @@
           </ul>
       </nav> 
     <br>
-<div class="container">
-  <div class="row">
+<div class="container" style="justify-content: space-evenly">
+  <div class="row" style="background-color: var(--green)">
       <div class="col">
-        <h2 class="job">Junior High History Teacher| University of Utah Graduate Student</h2>  
+        <h1 class="job"><br><br>Junior High History Teacher| University of Utah Graduate Student</h1>  
         <!--I have tried everything to vertically center the above text on the page and I can't figure it out!!-->
       </div>
     <div class="col">
-      <img src="img/Headshot.png" alt="Abby Moss Headshot" height="400" width="auto" style="border: 10px solid var(--green);">
+        <i class="fi-rr-edit-alt"></i>
+      <p > put icons of skills and such</p>
     </div>
   </div>
 </div>  
     <br>
   <!--Start About Me Section-->
-  <h3 id="aboutme" style="margin-right: 150px; margin-left: 150px;">About Me</h3>
-        <p>Hi! My name is Abby Moss. I am an 8th- and 9th-grade history teacher. I love learning about the past and recognizing the paths that brought us to our present reality.
-      I am also earning my Masters of Education at the University of Utah in Instructional Design and Educational Technology.</p>
-    
+  
+<!--End about me Section-->
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
