--- a/contact.html
+++ b/contact.html
@@ -28,11 +28,11 @@
     <h2 class="text-center"> Contact Me</h2> 
       <p style="text-align: center">Use the form below to contact me. I'd love to help!</p> <br>
       
-	<form class="form">
-	<h3 style="margin-right: 150px; margin-left: 150px;"> Contact Information </h3>
+		<form class="form">
+			<h3 style="margin-right: 150px; margin-left: 150px;"> Contact Information </h3>
             <table style="width:80%; margin-right: 150px; margin-left: 150px;">
                 <tr>
-                    <th class="input">First Name:</th>
+                    <th>First Name:</th>
                     <th>Last Name</th>
                 </tr>
                 <tr>
@@ -62,6 +62,6 @@
                 </tr>
             </table>
       </form>
-     <br>	  
+      <br>
     </body>
 </html>    
